[package]
name = "homage"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "Simple and effective dotfiles manager for your home."
homepage = "https://github.com/oahlen/homage"
categories = ["command-line-utilities"]
keywords = ["dotfiles"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
env_logger = "0.11.8"
log = "0.4.29"
walkdir = "2.5.0"
