[package]
name = "homage"
version = "2.0.0"
edition = "2024"
license = "MIT"
description = "Simple and effective dotfiles manager for your home."
homepage = "https://github.com/oahlen/homage"
categories = ["command-line-utilities"]
keywords = ["dotfiles"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
env_logger = "0.11.10"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.0"
walkdir = "2.5.0"
